Added about page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     <h1 class="logo"><a href="{{ '/' | prepend: site.github.url }}">{{ site.stylished_title }}</a></h1>
     <ul class="navbar">
       <li><a href="{{ '/tags' | prepend: site.github.url }}">tags</a></li>
-      <li><a href="{{ site.author.url }}">about</a></li>
+      <li><a href="{{ '/about' | prepend: site.github.url }}">about</a></li>
       <li><a href="{{ "/feed.xml" | prepend: site.github.url }}" target="_blank">feed</a></li>
     </ul>
   </div>
