--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,7 @@
 <section class="intro">
   <div class="container">
     <p class="lead">Hi, I'm <a href="{{ '/about' | prepend: site.author.url }}" target="_blank">{{ site.author.name }}</a>, a <strong class="emphasise">{{ site.author.job }}</strong>. <br/>
-    This is a collection of my thoughts on Software development, things I learn and * <br>
+    This is a collection of my thoughts on Software development, Things I Learn and * <br>
     <!-- <blockquote>
          These are things that don't really warrant a full blog post. -- <a href="https://github.com/jbranchaud/til" target="_blank">@jbranchaud</a>
     </blockquote> -->
