--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ layout: compress
   <body>
     <main id="site-top" class="wrapper">
       {% include header.html %}
+      {% include google-analytics.html %}
       {{ content }}
       {% include footer.html %}
     </main>
