--- a/_includes/post-share.html
+++ b/_includes/post-share.html
@@ -2,8 +2,7 @@
 <aside class="share">
 
   <h4>Share this.</h4>
-  <a href="http://twitter.com/share?text={{page.title}}&amp;url={{ site.url }}{{ page.url }}&amp;hashtags=scala,dev&amp;via=idarlington"
+  <a href="http://twitter.com/share?text={{page.title}}&amp;url={{ site.url }}{{ page.url }}&amp;hashtags={{ page.tags }}&amp;via=idarlington"
   onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">Twitter</a>
   <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'facebook-share', 'width=550,height=235');return false;">Facebook</a>
-
 </aside>
