--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,7 +7,7 @@
 
       <script type="text/javascript">
         var disqus_shortname = '{{ site.disqus_shortname }}';
-        var disqus_identifier = '{{ page.id }}';
+        var disqus_identifier = '{{ page.id || page.title }}';
         var disqus_title = '{{ page.title }}';
         var disqus_url = '{{ site.url }}{{ post.url }}';
         /*var disqus_developer = 1;*/
