--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,22 +1,26 @@
 {% if page.comments %}
   <aside id="comments" class="disqus">
-
     <div class="container">
       <h3><i class="icon icon-comments-o"></i> Comments</h3>
       <div id="disqus_thread"></div>
-      <script type="text/javascript">
-        var disqus_config = function () {
-            this.page.url = '{{ site.url }}{{ page.url }}';
-            this.page.identifier = '{{ page.title }}';
-        };
-
-        (function() {
-            var d = document, s = d.createElement('script');
-            s.src = '//'+ '{{ site.disqus_shortname }}' + '.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
-      </script>
+        <script type="text/javascript">
+            var disqus_shortname = '{{ site.disqus_shortname }}';
+            var disqus_identifier = '{{ page.url }}';
+            var disqus_url = '{{ site.url }}{{ page.url }}';
+            var disqus_script = 'embed.js';
+            (function () {
+              var embedScript = document.createElement('script');
+              embedScript.type = 'text/javascript';
+              embedScript.async = true;
+              embedScript.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(embedScript);
+              var countScript = document.createElement('script');
+              countScript.type = 'text/javascript';
+              countScript.async = true;
+              countScript.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(countScript);
+            }());
+        </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
     </div>
   </aside>
