--- a/assets/scss/_syntax-highlighting.scss
+++ b/assets/scss/_syntax-highlighting.scss
@@ -1,18 +1,21 @@
+@use "sass:color";
+@use "variables";
+
 /**
 * Syntax highlighting styles
 */
 .highlight {
-  margin: $base-spacing 0;
+  margin: variables.$base-spacing 0;
   padding: 0;
-  box-shadow: 0px 0px 2px rgba($black-color, .1);
+  box-shadow: 0px 0px 2px rgba(variables.$black-color, .1);
 
   .highlighter-rouge &, &, .hll, pre, code {
-    background-color: lighten($light-gray-color, 13%) !important;
+    background-color: color.adjust(variables.$light-gray-color, $lightness: 13%) !important;
   }
 
   pre {
     margin: 0;
-    padding: $base-spacing;
+    padding: variables.$base-spacing;
     white-space: pre;
     line-height: 23px;
     overflow-x: auto;
@@ -21,7 +24,7 @@
     word-wrap: inherit;
 
     &, code {
-      color: $base-font-color;
+      color: variables.$base-font-color;
     }
 
     code {
