--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,9 @@
+@use "sass:color";
+@use "bourbon/addons/font-stacks";
+@use "bourbon/functions/tint";
+
 // Typography
-$base-font-family: 'Open Sans', $helvetica;
+$base-font-family: 'Open Sans', font-stacks.$helvetica;
 // $base-font-family: 'Merriweather', "Georgia", serif;
 $heading-font-family: $base-font-family;
 
@@ -13,7 +17,7 @@ $heading-line-height: 1.2;
 // Other Sizes
 $base-border-radius: .52em;
 $base-spacing: $base-line-height * 1em;
-$small-spacing: $base-spacing / 2;
+$small-spacing: $base-spacing * 0.5;
 $base-z-index: 0;
 
 // Colors
@@ -35,11 +39,11 @@ $base-border: 1px solid $base-border-color;
 
 // Background Colors
 $base-background-color: $white-color;
-$secondary-background-color: tint($base-border-color, 80%);
+$secondary-background-color: tint.tint($base-border-color, 80%);
 
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba($black-color, 0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+$form-box-shadow-focus: $form-box-shadow, 0 0 5px color.adjust($action-color, $lightness: -5%, $alpha: -0.3);
 
 // Animations
 $base-duration: 150ms;
