--- a/assets/scss/bourbon/addons/_size.scss
+++ b/assets/scss/bourbon/addons/_size.scss
@@ -1,3 +1,6 @@
+@use "sass:list";
+@use "../functions/is-size";
+
 @charset "UTF-8";
 
 /// Sets the `width` and `height` of the element.
@@ -30,20 +33,20 @@
 /// @todo Refactor in 5.0.0 to use a comma-separated argument
 
 @mixin size($value) {
-  $width: nth($value, 1);
+  $width: list.nth($value, 1);
   $height: $width;
 
-  @if length($value) > 1 {
-    $height: nth($value, 2);
+  @if list.length($value) > 1 {
+    $height: list.nth($value, 2);
   }
 
-  @if is-size($height) {
+  @if is-size.is-size($height) {
     height: $height;
   } @else {
     @warn "`#{$height}` is not a valid length for the `$height` parameter in the `size` mixin.";
   }
 
-  @if is-size($width) {
+  @if is-size.is-size($width) {
     width: $width;
   } @else {
     @warn "`#{$width}` is not a valid length for the `$width` parameter in the `size` mixin.";
