--- a/assets/scss/bourbon/css3/_filter.scss
+++ b/assets/scss/bourbon/css3/_filter.scss
@@ -1,4 +1,6 @@
+@use "../addons/prefixer";
+
 @mixin filter($function: none) {
   // <filter-function> [<filter-function]* | none
-  @include prefixer(filter, $function, webkit spec);
+  @include prefixer.prefixer(filter, $function, webkit spec);
 }
