--- a/assets/scss/bourbon/css3/_font-feature-settings.scss
+++ b/assets/scss/bourbon/css3/_font-feature-settings.scss
@@ -1,4 +1,7 @@
+@use "sass:list";
+@use "../addons/prefixer";
+
 @mixin font-feature-settings($settings...) {
-  @if length($settings) == 0 { $settings: none; }
-  @include prefixer(font-feature-settings, $settings, webkit moz ms spec);
+  @if list.length($settings) == 0 { $settings: none; }
+  @include prefixer.prefixer(font-feature-settings, $settings, webkit moz ms spec);
 }
