--- a/assets/scss/bourbon/css3/_hyphens.scss
+++ b/assets/scss/bourbon/css3/_hyphens.scss
@@ -1,4 +1,6 @@
+@use "../addons/prefixer";
+
 @mixin hyphens($hyphenation: none) {
   // none | manual | auto
-  @include prefixer(hyphens, $hyphenation, webkit moz ms spec);
+  @include prefixer.prefixer(hyphens, $hyphenation, webkit moz ms spec);
 }
