--- a/assets/scss/bourbon/css3/_keyframes.scss
+++ b/assets/scss/bourbon/css3/_keyframes.scss
@@ -1,3 +1,5 @@
+@use "../settings/prefixer" as settings-prefixer;
+
 // Adds keyframes blocks for supported prefixes, removing redundant prefixes in the block's content
 @mixin keyframes($name) {
   $original-prefix-for-webkit:    $prefix-for-webkit;
