--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,7 +91,7 @@
     <link rel="next" href="{{ paginator.next_page_path | prepend: site.github.url | prepend: site.url }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.url}}">
+  <link rel="stylesheet" href="{{ "/assets/css/base.css" | prepend: site.url}}">
 
   <!-- Canonical link tag -->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.github.url | prepend: site.url }}">
