--- a/assets/scss/base/_lists.scss
+++ b/assets/scss/base/_lists.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 ul,
 ol {
 
@@ -7,24 +9,24 @@ ol {
 
   &%default-ul {
     list-style-type: disc;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
+    margin-bottom: variables.$small-spacing;
+    padding-left: variables.$base-spacing;
   }
 
   &%default-ol {
     list-style-type: decimal;
-    margin-bottom: $small-spacing;
-    padding-left: $base-spacing;
+    margin-bottom: variables.$small-spacing;
+    padding-left: variables.$base-spacing;
   }
 
 }
 
 dl {
-  margin-bottom: $small-spacing;
+  margin-bottom: variables.$small-spacing;
 
   dt {
     font-weight: bold;
-    margin-top: $small-spacing;
+    margin-top: variables.$small-spacing;
   }
 
   dd {
