--- a/assets/scss/base/_tables.scss
+++ b/assets/scss/base/_tables.scss
@@ -1,21 +1,24 @@
+@use "../bourbon/functions/shade";
+@use "../variables";
+
 table {
   border-collapse: collapse;
   font-feature-settings: "kern", "liga", "tnum";
-  margin: $small-spacing 0;
+  margin: variables.$small-spacing 0;
   table-layout: fixed;
   width: 100%;
 }
 
 th {
-  border-bottom: 1px solid shade($base-border-color, 25%);
+  border-bottom: 1px solid shade.shade(variables.$base-border-color, 25%);
   font-weight: 600;
-  padding: $small-spacing 0;
+  padding: variables.$small-spacing 0;
   text-align: left;
 }
 
 td {
-  border-bottom: $base-border;
-  padding: $small-spacing 0;
+  border-bottom: variables.$base-border;
+  padding: variables.$small-spacing 0;
 }
 
 tr,
