--- a/assets/scss/bourbon/_bourbon.scss
+++ b/assets/scss/bourbon/_bourbon.scss
@@ -3,85 +3,85 @@
 // Copyright 2011-2015 thoughtbot, inc.
 // MIT License
 
-@import "settings/prefixer";
-@import "settings/px-to-em";
-@import "settings/asset-pipeline";
+@use "settings/prefixer";
+@use "settings/px-to-em";
+@use "settings/asset-pipeline";
 
-@import "functions/assign-inputs";
-@import "functions/contains";
-@import "functions/contains-falsy";
-@import "functions/is-length";
-@import "functions/is-light";
-@import "functions/is-number";
-@import "functions/is-size";
-@import "functions/px-to-em";
-@import "functions/px-to-rem";
-@import "functions/shade";
-@import "functions/strip-units";
-@import "functions/tint";
-@import "functions/transition-property-name";
-@import "functions/unpack";
-@import "functions/modular-scale";
+@use "functions/assign-inputs";
+@use "functions/contains";
+@use "functions/contains-falsy";
+@use "functions/is-length";
+@use "functions/is-light";
+@use "functions/is-number";
+@use "functions/is-size";
+@use "functions/px-to-em" as px-to-em2;
+@use "functions/px-to-rem";
+@use "functions/shade";
+@use "functions/strip-units";
+@use "functions/tint";
+@use "functions/transition-property-name";
+@use "functions/unpack";
+@use "functions/modular-scale";
 
-@import "helpers/convert-units";
-@import "helpers/directional-values";
-@import "helpers/font-source-declaration";
-@import "helpers/gradient-positions-parser";
-@import "helpers/linear-angle-parser";
-@import "helpers/linear-gradient-parser";
-@import "helpers/linear-positions-parser";
-@import "helpers/linear-side-corner-parser";
-@import "helpers/radial-arg-parser";
-@import "helpers/radial-positions-parser";
-@import "helpers/radial-gradient-parser";
-@import "helpers/render-gradients";
-@import "helpers/shape-size-stripper";
-@import "helpers/str-to-num";
+@use "helpers/convert-units";
+@use "helpers/directional-values";
+@use "helpers/font-source-declaration";
+@use "helpers/gradient-positions-parser";
+@use "helpers/linear-angle-parser";
+@use "helpers/linear-gradient-parser";
+@use "helpers/linear-positions-parser";
+@use "helpers/linear-side-corner-parser";
+@use "helpers/radial-arg-parser";
+@use "helpers/radial-positions-parser";
+@use "helpers/radial-gradient-parser";
+@use "helpers/render-gradients";
+@use "helpers/shape-size-stripper";
+@use "helpers/str-to-num";
 
-@import "css3/animation";
-@import "css3/appearance";
-@import "css3/backface-visibility";
-@import "css3/background";
-@import "css3/background-image";
-@import "css3/border-image";
-@import "css3/calc";
-@import "css3/columns";
-@import "css3/filter";
-@import "css3/flex-box";
-@import "css3/font-face";
-@import "css3/font-feature-settings";
-@import "css3/hidpi-media-query";
-@import "css3/hyphens";
-@import "css3/image-rendering";
-@import "css3/keyframes";
-@import "css3/linear-gradient";
-@import "css3/perspective";
-@import "css3/placeholder";
-@import "css3/radial-gradient";
-@import "css3/selection";
-@import "css3/text-decoration";
-@import "css3/transform";
-@import "css3/transition";
-@import "css3/user-select";
+@use "css3/animation";
+@use "css3/appearance";
+@use "css3/backface-visibility";
+@use "css3/background";
+@use "css3/background-image";
+@use "css3/border-image";
+@use "css3/calc";
+@use "css3/columns";
+@use "css3/filter";
+@use "css3/flex-box";
+@use "css3/font-face";
+@use "css3/font-feature-settings";
+@use "css3/hidpi-media-query";
+@use "css3/hyphens";
+@use "css3/image-rendering";
+@use "css3/keyframes";
+@use "css3/linear-gradient";
+@use "css3/perspective";
+@use "css3/placeholder";
+@use "css3/radial-gradient";
+@use "css3/selection";
+@use "css3/text-decoration";
+@use "css3/transform";
+@use "css3/transition";
+@use "css3/user-select";
 
-@import "addons/border-color";
-@import "addons/border-radius";
-@import "addons/border-style";
-@import "addons/border-width";
-@import "addons/buttons";
-@import "addons/clearfix";
-@import "addons/ellipsis";
-@import "addons/font-stacks";
-@import "addons/hide-text";
-@import "addons/margin";
-@import "addons/padding";
-@import "addons/position";
-@import "addons/prefixer";
-@import "addons/retina-image";
-@import "addons/size";
-@import "addons/text-inputs";
-@import "addons/timing-functions";
-@import "addons/triangle";
-@import "addons/word-wrap";
+@use "addons/border-color";
+@use "addons/border-radius";
+@use "addons/border-style";
+@use "addons/border-width";
+@use "addons/buttons";
+@use "addons/clearfix";
+@use "addons/ellipsis";
+@use "addons/font-stacks";
+@use "addons/hide-text";
+@use "addons/margin";
+@use "addons/padding";
+@use "addons/position";
+@use "addons/prefixer" as prefixer2;
+@use "addons/retina-image";
+@use "addons/size";
+@use "addons/text-inputs";
+@use "addons/timing-functions";
+@use "addons/triangle";
+@use "addons/word-wrap";
 
-@import "bourbon-deprecated-upcoming";
+@use "bourbon-deprecated-upcoming";
