--- a/assets/scss/bourbon/addons/_border-color.scss
+++ b/assets/scss/bourbon/addons/_border-color.scss
@@ -1,3 +1,5 @@
+@use "../helpers/directional-values";
+
 @charset "UTF-8";
 
 /// Provides a quick method for targeting `border-color` on specific sides of a box. Use a `null` value to “skip” a side.
@@ -22,5 +24,5 @@
 /// @output `border-color`
 
 @mixin border-color($vals...) {
-  @include directional-property(border, color, $vals...);
+  @include directional-values.directional-property(border, color, $vals...);
 }
