--- a/assets/scss/bourbon/addons/_position.scss
+++ b/assets/scss/bourbon/addons/_position.scss
@@ -1,3 +1,8 @@
+@use "sass:list";
+@use "sass:meta";
+@use "../functions/is-length";
+@use "../functions/unpack";
+
 @charset "UTF-8";
 
 /// Provides a quick method for setting an element’s position. Use a `null` value to “skip” a side.
@@ -24,24 +29,24 @@
 /// @require {function} unpack
 
 @mixin position($position: relative, $coordinates: null null null null) {
-  @if type-of($position) == list {
+  @if meta.type-of($position) == list {
     $coordinates: $position;
     $position: relative;
   }
 
-  $coordinates: unpack($coordinates);
+  $coordinates: unpack.unpack($coordinates);
 
   $offsets: (
-    top:    nth($coordinates, 1),
-    right:  nth($coordinates, 2),
-    bottom: nth($coordinates, 3),
-    left:   nth($coordinates, 4)
+    top:    list.nth($coordinates, 1),
+    right:  list.nth($coordinates, 2),
+    bottom: list.nth($coordinates, 3),
+    left:   list.nth($coordinates, 4)
   );
 
   position: $position;
 
   @each $offset, $value in $offsets {
-    @if is-length($value) {
+    @if is-length.is-length($value) {
       #{$offset}: $value;
     }
   }
