--- a/assets/scss/bourbon/addons/_retina-image.scss
+++ b/assets/scss/bourbon/addons/_retina-image.scss
@@ -1,3 +1,5 @@
+@use "../css3/hidpi-media-query";
+
 @mixin retina-image($filename, $background-size, $extension: png, $retina-filename: null, $retina-suffix: _2x, $asset-pipeline: $asset-pipeline) {
   @if $asset-pipeline {
     background-image: image-url("#{$filename}.#{$extension}");
@@ -5,7 +7,7 @@
     background-image:       url("#{$filename}.#{$extension}");
   }
 
-  @include hidpi {
+  @include hidpi-media-query.hidpi {
     @if $asset-pipeline {
       @if $retina-filename {
         background-image: image-url("#{$retina-filename}.#{$extension}");
