--- a/assets/scss/bourbon/css3/_border-image.scss
+++ b/assets/scss/bourbon/css3/_border-image.scss
@@ -1,3 +1,10 @@
+@use "sass:list";
+@use "sass:map";
+@use "sass:meta";
+@use "sass:string";
+@use "../helpers/linear-gradient-parser";
+@use "../helpers/radial-gradient-parser";
+
 @mixin border-image($borders...) {
   $webkit-borders: ();
   $spec-borders: ();
@@ -5,13 +12,13 @@
   @each $border in $borders {
     $webkit-border: ();
     $spec-border: ();
-    $border-type: type-of($border);
+    $border-type: meta.type-of($border);
 
     @if $border-type == string or list {
-      $border-str: if($border-type == list, nth($border, 1), $border);
+      $border-str: if($border-type == list, list.nth($border, 1), $border);
 
-      $url-str:       str-slice($border-str, 1, 3);
-      $gradient-type: str-slice($border-str, 1, 6);
+      $url-str:       string.slice($border-str, 1, 3);
+      $gradient-type: string.slice($border-str, 1, 6);
 
       @if $url-str == "url" {
         $webkit-border: $border;
@@ -19,15 +26,15 @@
       }
 
       @else if $gradient-type == "linear" {
-        $gradients: _linear-gradient-parser("#{$border}");
-        $webkit-border: map-get($gradients, webkit-image);
-        $spec-border:   map-get($gradients, spec-image);
+        $gradients: linear-gradient-parser.linear-gradient-parser("#{$border}");
+        $webkit-border: map.get($gradients, webkit-image);
+        $spec-border:   map.get($gradients, spec-image);
       }
 
       @else if $gradient-type == "radial" {
-        $gradients: _radial-gradient-parser("#{$border}");
-        $webkit-border: map-get($gradients, webkit-image);
-        $spec-border:   map-get($gradients, spec-image);
+        $gradients: radial-gradient-parser.radial-gradient-parser("#{$border}");
+        $webkit-border: map.get($gradients, webkit-image);
+        $spec-border:   map.get($gradients, spec-image);
       }
 
       @else {
@@ -41,8 +48,8 @@
       $spec-border:   $border;
     }
 
-    $webkit-borders: append($webkit-borders, $webkit-border, comma);
-    $spec-borders:   append($spec-borders,   $spec-border,   comma);
+    $webkit-borders: list.append($webkit-borders, $webkit-border, comma);
+    $spec-borders:   list.append($spec-borders,   $spec-border,   comma);
   }
 
   -webkit-border-image: $webkit-borders;
