--- a/assets/scss/bourbon/css3/_transform.scss
+++ b/assets/scss/bourbon/css3/_transform.scss
@@ -1,15 +1,17 @@
+@use "../addons/prefixer";
+
 @mixin transform($property: none) {
   // none | <transform-function>
-  @include prefixer(transform, $property, webkit moz ms o spec);
+  @include prefixer.prefixer(transform, $property, webkit moz ms o spec);
 }
 
 @mixin transform-origin($axes: 50%) {
   // x-axis - left | center | right  | length | %
   // y-axis - top  | center | bottom | length | %
   // z-axis -                          length
-  @include prefixer(transform-origin, $axes, webkit moz ms o spec);
+  @include prefixer.prefixer(transform-origin, $axes, webkit moz ms o spec);
 }
 
 @mixin transform-style($style: flat) {
-  @include prefixer(transform-style, $style, webkit moz ms o spec);
+  @include prefixer.prefixer(transform-style, $style, webkit moz ms o spec);
 }
