--- a/assets/scss/bourbon/functions/_is-size.scss
+++ b/assets/scss/bourbon/functions/_is-size.scss
@@ -1,3 +1,6 @@
+@use "contains";
+@use "is-length";
+
 @charset "UTF-8";
 
 /// Checks for a valid CSS size.
@@ -8,6 +11,6 @@
 /// @require {function} is-length
 
 @function is-size($value) {
-  @return is-length($value)
-          or contains("fill" "fit-content" "min-content" "max-content", $value);
+  @return is-length.is-length($value)
+          or contains.contains("fill" "fit-content" "min-content" "max-content", $value);
 }
