--- a/assets/scss/bourbon/functions/_tint.scss
+++ b/assets/scss/bourbon/functions/_tint.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @charset "UTF-8";
 
 /// Mixes a color with white.
@@ -20,5 +21,5 @@
 /// @return {Color}
 
 @function tint($color, $percent) {
-  @return mix(#fff, $color, $percent);
+  @return color.mix(#fff, $color, $percent);
 }
