--- a/assets/scss/bourbon/functions/_unpack.scss
+++ b/assets/scss/bourbon/functions/_unpack.scss
@@ -1,3 +1,4 @@
+@use "sass:list";
 @charset "UTF-8";
 
 /// Converts shorthand to the 4-value syntax.
@@ -15,12 +16,12 @@
 ///   }
 
 @function unpack($shorthand) {
-  @if length($shorthand) == 1 {
-    @return nth($shorthand, 1) nth($shorthand, 1) nth($shorthand, 1) nth($shorthand, 1);
-  } @else if length($shorthand) == 2 {
-    @return nth($shorthand, 1) nth($shorthand, 2) nth($shorthand, 1) nth($shorthand, 2);
-  } @else if length($shorthand) == 3 {
-    @return nth($shorthand, 1) nth($shorthand, 2) nth($shorthand, 3) nth($shorthand, 2);
+  @if list.length($shorthand) == 1 {
+    @return list.nth($shorthand, 1) list.nth($shorthand, 1) list.nth($shorthand, 1) list.nth($shorthand, 1);
+  } @else if list.length($shorthand) == 2 {
+    @return list.nth($shorthand, 1) list.nth($shorthand, 2) list.nth($shorthand, 1) list.nth($shorthand, 2);
+  } @else if list.length($shorthand) == 3 {
+    @return list.nth($shorthand, 1) list.nth($shorthand, 2) list.nth($shorthand, 3) list.nth($shorthand, 2);
   } @else {
     @return $shorthand;
   }
