--- a/assets/scss/bourbon/helpers/_linear-side-corner-parser.scss
+++ b/assets/scss/bourbon/helpers/_linear-side-corner-parser.scss
@@ -1,17 +1,20 @@
+@use "sass:string";
+@use "linear-positions-parser";
+
 // Private function for linear-gradient-parser
-@function _linear-side-corner-parser($image, $first-val, $prefix, $suffix, $has-multiple-vals) {
-  $val-1: str-slice($first-val, 1, $has-multiple-vals - 1);
-  $val-2: str-slice($first-val, $has-multiple-vals + 1, str-length($first-val));
+@function linear-side-corner-parser($image, $first-val, $prefix, $suffix, $has-multiple-vals) {
+  $val-1: string.slice($first-val, 1, $has-multiple-vals - 1);
+  $val-2: string.slice($first-val, $has-multiple-vals + 1, string.length($first-val));
   $val-3: null;
-  $has-val-3: str-index($val-2, " ");
+  $has-val-3: string.index($val-2, " ");
 
   @if $has-val-3 {
-    $val-3: str-slice($val-2, $has-val-3 + 1, str-length($val-2));
-    $val-2: str-slice($val-2, 1, $has-val-3 - 1);
+    $val-3: string.slice($val-2, $has-val-3 + 1, string.length($val-2));
+    $val-2: string.slice($val-2, 1, $has-val-3 - 1);
   }
 
-  $pos: _position-flipper($val-1) _position-flipper($val-2) _position-flipper($val-3);
-  $pos: unquote($pos + "");
+  $pos: linear-positions-parser.position-flipper($val-1) linear-positions-parser.position-flipper($val-2) linear-positions-parser.position-flipper($val-3);
+  $pos: string.unquote($pos + "");
 
   // Use old spec for webkit
   @if $val-1 == "to" {
